--- a/Javascript_Practice/JS_Practice2.html
+++ b/Javascript_Practice/JS_Practice2.html
@@ -51,6 +51,6 @@
   Right now it's connected to Part8.js which contains the solutions</p>
 
   </div>
-  <script src="Part9_Practice.js"></script>
+  <script src="JS_Practice2.js"></script>
   </body>
 </html>
